# skuire

./: ChangeLog  TODO-krusader-next
krusader/: CMakeLists.txt  abstractpanelmanager.h  actionsbase.cpp  actionsbase.h  defaults.h  filemanagerwindow.h  kractions.cpp  kractions.h  krglobal.cpp  krglobal.h  krmainwindow.h  krslots.cpp  krslots.h  krtrashhandler.cpp  krusader.cpp  krusader.h  krusaderapp.cpp  krusaderapp.h  krusaderui.rc  krusaderview.cpp  krusaderview.h  main.cpp  panelmanager.cpp  panelmanager.h  paneltabbar.cpp  paneltabbar.h  tabactions.cpp  tabactions.h
krusader/BookMan/: kraddbookmarkdlg.h  krbookmarkhandler.cpp  krbookmarkhandler.h
krusader/Dialogs/: checksumdlg.cpp  krkeydialog.cpp  krkeydialog.h
krusader/DiskUsage/: diskusage.cpp  diskusage.h
krusader/Filter/: advancedfilter.cpp  advancedfilter.h  filterbase.h
krusader/GUI/: kfnkeys.cpp  (+4 more)
krusader/Panel/: CMakeLists.txt  calcspacethread.cpp  calcspacethread.h  dirhistoryqueue.cpp  dirhistoryqueue.h  krcalcspacedialog.cpp  krcalcspacedialog.h  krcolorcache.cpp  krcolorcache.h  krinterbriefview.cpp  krinterbriefview.h  krinterdetailedview.cpp  krinterdetailedview.h  krinterview.cpp  krinterview.h  krinterviewitem.h  krinterviewitemdelegate.cpp  kritemview.cpp  kritemview.h  krmousehandler.cpp  krmousehandler.h  krpanel.cpp  krpanel.h  krpopupmenu.cpp  krpopupmenu.h  krpreviewjob.cpp  krpreviewjob.h  krpreviewpopup.cpp  krpreviewpopup.h  krpreviews.cpp  krpreviews.h  krsort.cpp  krsort.h  krvfsmodel.cpp  krvfsmodel.h  krview.cpp  krview.h  krviewfactory.cpp  krviewfactory.h  krviewitem.cpp  (+25 more)
(+68 files in other folders)
